--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -39,3 +39,42 @@
 .navbar a:hover {
   text-decoration: underline;
 }
+.logo i,
+.contact-info i {
+  margin-right: 6px; /* icon aur text ke beech thoda gap */
+  vertical-align: middle; /* text ke sath same line par */
+}
+.contact-info .fa-phone-alt {
+  transform: rotate(90deg);  /* ya -90deg try karna */
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #60afbb;
+  min-width: 180px;
+  box-shadow: 0px 8px 16px rgba(0,0,0,0.2);
+  z-index: 1;
+  border-radius: 5px;
+}
+
+.dropdown-content a {
+  color: #fff;
+  padding: 0.8rem 1rem;
+  text-decoration: none;
+  display: block;
+  cursor: pointer;
+}
+
+.dropdown-content a:hover {
+  background-color: #144d48;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
