--- a/src/components/FiveStarPackage1.css
+++ b/src/components/FiveStarPackage1.css
@@ -15,11 +15,16 @@
   gap: 2rem;
   margin-bottom: 3rem;
   align-items: center;
+  
   border: 1px solid #e0e0e0;
   border-radius: 10px;
   box-shadow: 0 2px 8px rgba(0,0,0,0.1);
   overflow: hidden;
-  flex-direction: row; /* Desktop default: row */
+ 
+  
+  flex-direction: row-reverse; /* image left side pe aa jayegi */
+  align-items: center;
+  justify-content: space-between;
 }
 
 .package-details {
