--- a/src/components/FiveStarPackage2.css
+++ b/src/components/FiveStarPackage2.css
@@ -12,6 +12,9 @@
 
 .package-row {
   display: flex;
+  flex-direction: row-reverse; /* image left side pe aa jayegi */
+  align-items: center;
+  justify-content: space-between;
   gap: 2rem;
   margin-bottom: 3rem;
   align-items: center;
