--- a/src/components/FiveStarPackage3.css
+++ b/src/components/FiveStarPackage3.css
@@ -19,6 +19,9 @@
   border-radius: 10px;
   box-shadow: 0 2px 8px rgba(0,0,0,0.1);
   overflow: hidden;
+    flex-direction: row-reverse; /* image left side pe aa jayegi */
+  align-items: center;
+  justify-content: space-between;
 }
 
 .package-details {
