--- a/src/components/FourStarPackages.css
+++ b/src/components/FourStarPackages.css
@@ -61,7 +61,7 @@
 
 .price {
   background: #333;
-  color: rgb(255, 255, 255);
+  color: white !important;
   font-weight: bold;
   padding: 0.7rem;
   margin-top: 1rem;
@@ -142,7 +142,7 @@
   }
 
   .price {
-    width:80%;
+    
     font-size: 1rem; /* price ka font size adjust */
     padding: 0.4rem;
   }
